--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
 		"stories": "ladle serve"
 	},
 	"dependencies": {
+		"@fontsource/press-start-2p": "^4.5.11",
 		"@ladle/react": "^2.4.5",
 		"jotai": "^1.10.0",
+		"nes.css": "^2.3.0",
 		"random-seed": "^0.3.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
